# norc

./: .clippy.toml  .gitignore  .rustfmt.toml  CHANGELOG.md  COVERAGE.md  Cargo.toml  Dockerfile.client  Dockerfile.server  IMPLEMENTATION_GUIDE.md  LICENSE  PROTOCOL_REQUIREMENTS.md  PROTOCOL_SPECIFICATION.md  README.md  REFERENCES.md  SECURITY_MODEL.md  SERVER_README.md  SERVER_REQUIREMENTS.md  TEST_VECTORS.md  codecov.yml  deny.toml  docker-compose.yml  justfile  requirements.md  rust-toolchain.toml  rustfmt.toml  validation_test.rs
.github/workflows/: ci.yml  release.yml
benches/: Cargo.toml  frame_codec.rs
benches/benches/: certificate_benchmarks.rs  health_benchmarks.rs
benches/src/: lib.rs
client/: Cargo.toml
client/src/: main.rs
config/: server-example.toml
docs/api/: ADMIN_API.md
docs/architecture/: SYSTEM_ARCHITECTURE.md
docs/configuration/: CONFIGURATION.md
docs/deployment/: DEPLOYMENT_GUIDE.md
docs/troubleshooting/: TROUBLESHOOTING.md
examples/: config-development.toml  config-production.toml  config.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_frame_decode.rs  fuzz_handshake_parse.rs
norc_core/: Cargo.toml
norc_core/src/: lib.rs
norc_core/tests/: aead_roundtrip.rs
packaging/launchd/: com.navatron.norc.plist
packaging/systemd/: norc.env  norc.service
server/: Cargo.toml
server/src/: main.rs
specs/: NORC-C_CLIENT_SERVER.md  NORC-F_SERVER_FEDERATION.md  NORC-T_TRUST_ESTABLISHMENT.md  README.md
src/client/: Cargo.toml  main.rs
src/client/src/: main.rs
src/crates/admin-api/: Cargo.toml  README.md
src/crates/admin-api/src/: auth.rs  error.rs  lib.rs  middleware.rs  models.rs  rbac.rs  routes.rs
src/crates/admin-api/src/handlers/: api_keys.rs  audit.rs  certificates.rs  config.rs  connections.rs  devices.rs  federation.rs  health.rs  mod.rs  monitoring.rs  sessions.rs  users.rs
src/crates/cli/: Cargo.toml
src/crates/cli/src/: diagnostics.rs  lib.rs
src/crates/cli/src/service/: launchd.rs  mod.rs  systemd.rs  windows.rs
src/crates/client-core/: Cargo.toml
src/crates/client-core/src/: client.rs  error.rs  lib.rs
src/crates/config/: Cargo.toml
src/crates/config/src/: cli.rs  error.rs  lib.rs  loader.rs  security.rs  server.rs  validation.rs
src/crates/config/tests/: config_validation_tests.rs
src/crates/persistence/: Cargo.toml
src/crates/persistence/migrations/: 20250930000001_create_users.sql  20250930000002_create_devices.sql  20250930000003_create_sessions.sql  20250930000004_create_messages.sql  20250930000005_create_federation.sql  20250930000006_create_presence.sql  20250930000007_create_push_tokens.sql  20250930000008_create_audit_log.sql
src/crates/persistence/src/: database.rs  error.rs  lib.rs  migrations.rs  models.rs
src/crates/persistence/src/repositories/: audit.rs  device.rs  federation.rs  message.rs  mod.rs  presence.rs  session.rs  user.rs
src/crates/protocol/: Cargo.toml
src/crates/protocol/src/: crypto.rs  error.rs  framing.rs  handshake.rs  identity.rs  lib.rs  message.rs  messages.rs  trust.rs  types.rs  version.rs  wire.rs
src/crates/protocol/tests/: framing_roundtrip.rs  handshake_negotiation.rs
src/crates/server-core/: Cargo.toml
src/crates/server-core/src/: authorization.rs  connection.rs  connection_handler.rs  connection_pool.rs  daemon.rs  error.rs  federation.rs  lib.rs  logging.rs  router.rs  runtime.rs  server.rs  session.rs  signal_handler.rs
src/crates/server-core/src/auth/: device_auth.rs  federation_auth.rs  integration.rs  mod.rs  protocol.rs  rate_limit.rs  rbac.rs  session.rs
src/crates/server-core/src/observability/: health.rs  logging.rs  metrics.rs  mod.rs  tracing.rs
src/crates/server-core/src/security/: circuit_breaker.rs  mod.rs  privileges.rs  rate_limiter.rs  validator.rs
src/crates/transport/: Cargo.toml
src/crates/transport/src/: connection.rs  connection_clean.rs  connection_simple.rs  error.rs  framing.rs  health.rs  lib.rs  listener.rs  logging.rs  metrics.rs  rate_limit.rs  revocation.rs  rotation_manager.rs  tcp.rs  tls.rs  tls_config.rs  tracing_spans.rs  websocket.rs
src/crates/transport/tests/: certificate_validation_tests.rs  revocation_tests.rs  rotation_manager_tests.rs
src/crates/transport/tests/common/: mod.rs  test_certs.rs
src/crates/tui/: Cargo.toml
src/crates/tui/src/: lib.rs
src/crates/xtask/: Cargo.toml
src/crates/xtask/src/: main.rs
src/server/: Cargo.toml  main.rs
src/server/src/: main.rs
tests/: system_validation.rs
tests/integration/: Cargo.toml
tests/integration/src/: client_server.rs  common.rs  components.rs  lib.rs  protocol.rs
validation_test/: Cargo.toml
validation_test/src/: main.rs
