[workspace]
resolver = "2"
members = [
    "src/crates/protocol",
    "src/crates/transport", 
    "src/crates/client-core",
    "src/crates/server-core",
    "src/crates/tui",
    "src/crates/cli",
    "src/crates/config",
    "src/client",
    "src/server"
]

[workspace.package]
version = "0.1.0"
authors = ["NavaTron Holding B.V."]
license = "Apache-2.0"
edition = "2024"
rust-version = "1.90.0"
repository = "https://github.com/navatron/norc"
homepage = "https://navatron.com"
description = "NavaTron Open Real-time Communication Protocol"
keywords = ["chat", "protocol", "encryption", "federation"]

# Workspace-wide metadata
[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Common lint configuration
[workspace.lints.rust]
unsafe_code = "allow"  # Allow for test environment variable manipulation
missing_docs = "allow"  # Allow missing docs for CI
unused_must_use = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow certain patterns common in networking/crypto code
module_name_repetitions = "allow"
similar_names = "allow"
# Allow specific patterns for CI compatibility
collapsible_if = "allow"
type_complexity = "allow"
derivable_impls = "allow"
while_let_loop = "allow"
option_if_let_else = "allow"
single_match_else = "allow"
redundant_closure_for_method_calls = "allow"
# Allow documentation and metadata patterns for development
missing_errors_doc = "allow"
cargo-common-metadata = "allow"
doc-markdown = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
# Allow common systems programming patterns
uninlined_format_args = "allow"
unused_self = "allow"
needless_pass_by_value = "allow"
redundant_clone = "allow"
cast_possible_truncation = "allow"
or_fun_call = "allow"
significant_drop_tightening = "allow"
unused_async = "allow"
ignored_unit_patterns = "allow"
multiple_crate_versions = "allow"
# Allow CLI-related patterns
disallowed_methods = "allow"
map_clone = "allow"

# Shared dependencies for workspace
[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Network and security
rustls = "0.21"
rustls-pemfile = "2.0"
tokio-rustls = "0.24"
webpki-roots = "0.25"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI and configuration
clap = { version = "4.0", features = ["derive", "env"] }

# Cryptography
ring = "0.17"
ed25519-dalek = "2.0"
x25519-dalek = "2.0"

# Testing and development
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"

# Utility crates
bytes = "1.0"
futures = "0.3"
pin-project-lite = "0.2"

# Time handling
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# Binary encoding
postcard = { version = "1.0", features = ["use-std"] }