[workspace]
resolver = "2"
members = [
    "src/crates/protocol",
    "src/crates/transport", 
    "src/crates/client-core",
    "src/crates/server-core",
    "src/crates/persistence",
    "src/crates/tui",
    "src/crates/cli",
    "src/crates/config",
    "src/client",
    "src/server"
]

[workspace.package]
version = "0.1.0"
authors = ["NavaTron Holding B.V."]
license = "Apache-2.0"
edition = "2024"
rust-version = "1.90.0"
repository = "https://github.com/navatron/norc"
homepage = "https://navatron.com"
description = "NavaTron Open Real-time Communication Protocol"
keywords = ["chat", "protocol", "encryption", "federation"]

