[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
anyhow = "1"
x25519-dalek = { version = "2" }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
blake3 = "1"
base64 = "0.22"
hkdf = "0.12"
sha2 = "0.10"
norc_core = { path = "../norc_core" }
