[package]
name = "navafuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features=["arbitrary-derive"] }

[dependencies.navatron-protocol]
path = "../src/crates/protocol"
features = []

[build-dependencies]
cc = "1"

[profile.dev]
opt-level = 1

[profile.release]
debug = 1
codegen-units = 1
lto = "thin"

[[bin]]
name = "fuzz_frame_decode"
path = "fuzz_targets/fuzz_frame_decode.rs"

[[bin]]
name = "fuzz_handshake_parse"
path = "fuzz_targets/fuzz_handshake_parse.rs"
