[package]
name = "norc_core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
base64 = "0.22"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
ed25519-dalek = "2"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
thiserror = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
