[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json", "ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
blake3 = "1"
thiserror = "1"
once_cell = "1"
hex = "0.4"
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1"
 norc_core = { path = "../norc_core" }
x25519-dalek = { version = "2" }
base64 = "0.22"
hkdf = "0.12"
sha2 = "0.10"
futures-util = "0.3"
