[package]
name = "validation_test"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
navatron-protocol = { path = "../src/crates/protocol" }
navatron-client-core = { path = "../src/crates/client-core" }
navatron-server-core = { path = "../src/crates/server-core" }
navatron-transport = { path = "../src/crates/transport" }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }