[package]
name = "norc-client"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "NORC Client - Terminal chat client"

[lints]
workspace = true

[[bin]]
name = "norc-client"
path = "main.rs"
