[package]
name = "norc-client"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "NORC Client - Terminal chat client"

[dependencies]
# Placeholder dependencies for the client
tokio = { version = "1.40", features = ["full"] }
