[package]
name = "norc-server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "NORC Server"
keywords = ["server", "chat", "federation"]

[[bin]]
name = "norc-server"
path = "main.rs"
