[package]
name = "norc-server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "NORC Server"
keywords = ["server", "chat", "federation"]

[dependencies]
# Local workspace dependencies
norc-config = { path = "../crates/config" }
norc-server-core = { path = "../crates/server-core" }

# Core async runtime
tokio = { version = "1.40", features = ["full"] }

# CLI and configuration
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cross-platform utilities
ctrlc = "3.4"

# Platform-specific daemon utilities
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "user"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_Security",
] }
