[package]
name = "navatron-integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Integration tests for the NavaTron NORC system"

[dependencies]
navatron-protocol = { path = "../../src/crates/protocol" }
navatron-transport = { path = "../../src/crates/transport" }
navatron-client-core = { path = "../../src/crates/client-core" }
navatron-server-core = { path = "../../src/crates/server-core" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"