[package]
name = "norc-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Command line interface library for NORC"
keywords = ["cli", "command-line"]

[lints]
workspace = true

[lib]
name = "norc_cli"
crate-type = ["lib"]

[dependencies]
# CLI handling
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }