[package]
name = "norc-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Command-line interface for NORC"
keywords = ["cli", "terminal"]

[dependencies]
# Placeholder dependencies
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }