[package]
name = "navatron-client-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "NavaTron NORC Client Core - Headless client library"
keywords = ["client", "norc", "chat"]
categories = ["network-programming"]

[dependencies]
# Protocol and transport
navatron-protocol = { path = "../protocol" }
navatron-transport = { path = "../transport" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }

[features]
default = []