[package]
name = "norc-client-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Core client functionality for NORC"
keywords = ["client", "core"]

[lints]
workspace = true

[lib]
name = "norc_client_core"
crate-type = ["lib"]

[dependencies]
# Workspace crates
norc-protocol = { path = "../protocol" }
norc-transport = { path = "../transport" }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }