[package]
name = "norc-client-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "NORC Client Core - Core client functionality"
keywords = ["client", "chat"]

[dependencies]
# Placeholder dependencies
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
