[package]
name = "norc-config"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Configuration management for NORC"
keywords = ["config", "toml"]

[lints]
workspace = true

[lib]
name = "norc_config"
crate-type = ["lib"]

[dependencies]
# Serialization
serde = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# File system operations (no additional dependencies needed)

[dev-dependencies]
tempfile = { workspace = true }