[package]
name = "norc-config"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Configuration management for NORC"
keywords = ["config", "toml"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"
