[package]
name = "norc-persistence"
version = "0.1.0"
edition = "2021"
authors = ["NavaTron"]
license = "Apache-2.0"

[dependencies]
# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "json"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Protocol types
norc-protocol = { path = "../protocol" }

# Logging
tracing = "0.1"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }
