[package]
name = "norc-protocol"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "NORC Protocol implementation"
keywords = ["protocol", "crypto", "federation"]

[dependencies]
# Placeholder dependencies
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
