[package]
name = "norc-server-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "NORC Server Core - Core server functionality and daemon management"
keywords = ["server", "daemon", "federation"]

[lib]
name = "norc_server_core"
crate-type = ["lib"]

[dependencies]
# Workspace crates
norc-protocol = { path = "../protocol" }
norc-config = { path = "../config" }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Network
tokio-rustls = { workspace = true }
rustls = { workspace = true }

# Utilities
futures = { workspace = true }
pin-project-lite = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
[lints]
workspace = true
