[package]
name = "norc-server-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "NORC Server Core - Core server functionality and daemon management"
keywords = ["server", "daemon", "federation"]

[dependencies]
# Local workspace dependencies
norc-config = { path = "../config" }

# Core async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cross-platform utilities
ctrlc = "3.4"

# Platform-specific daemon utilities
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "user"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_Security",
] }
