[package]
name = "norc-server-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "NORC Server Core - Core server functionality and daemon management"
keywords = ["server", "daemon", "federation"]

[dependencies]
# Local workspace dependencies
norc-config = { path = "../config" }
norc-protocol = { path = "../protocol" }
norc-transport = { path = "../transport" }

# TLS support
rustls = "0.23"
webpki-roots = "0.26"

# Core async runtime
tokio = { version = "1.40", features = ["full"] }

# CPU detection
num_cpus = "1.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "fmt"] }
tracing-appender = "0.2"

# Metrics
prometheus = "0.13"
tokio-metrics = "0.3"

# OpenTelemetry (optional)
opentelemetry = { version = "0.21", optional = true }
opentelemetry-otlp = { version = "0.14", optional = true }
tracing-opentelemetry = { version = "0.22", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cross-platform utilities
ctrlc = "3.4"

# Platform-specific daemon utilities
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "user", "resource", "mman"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_Security",
] }

[features]
default = ["metrics"]
metrics = []
tracing-otlp = ["opentelemetry", "opentelemetry-otlp", "tracing-opentelemetry"]
