[package]
name = "norc-transport"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Transport layer for NORC protocol"
keywords = ["transport", "network"]

[dependencies]
# Placeholder dependencies
tokio = { version = "1.40", features = ["net", "io-util"] }
serde = { version = "1.0", features = ["derive"] }