[package]
name = "norc-transport"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Transport layer for NORC protocol"
keywords = ["transport", "network"]

[dependencies]
# Local dependencies
norc-protocol = { path = "../protocol" }

# Async runtime and networking
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
futures-util = "0.3"

# TLS support
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["std", "ring"] }
rustls-pemfile = "2.1"
webpki-roots = "0.26"
x509-parser = "0.16"
webpki = { package = "rustls-webpki", version = "0.102" }
sha2 = "0.10"

# Certificate revocation checking
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
der-parser = "9.0"
oid-registry = "0.7"

# WebSocket support
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.24"

# QUIC support (optional)
quinn = { version = "0.11", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bytes = "1.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tracing
tracing = "0.1"

# Utilities
hex = "0.4"  # Hex encoding for fingerprints

[dev-dependencies]
# Testing utilities
tempfile = "3.12"
rcgen = "0.13"  # Certificate generation for tests
time = "0.3"    # Time handling for certificate validity

[features]
default = ["tls", "websocket"]
tls = []
websocket = []
quic = ["quinn"]