[package]
name = "norc-tui"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Terminal UI components for NORC"
keywords = ["tui", "terminal"]

[dependencies]
# Placeholder dependencies
tokio = { version = "1.40", features = ["full"] }